src/test/deca/syntax/parser/invalid/wrong_double_plus.deca
{
    x = 5;
    x ++ 2;
}

//# output
